use the new IOStream and IOListener interfaces for iodrivers_base to implement port-based communication
This fixes the highly-broken implementation that was there to
communicate with the driver through the ports

--- a/tasks/CMakeLists.txt
+++ b/tasks/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 include(iodrivers_baseTaskLib)
 ADD_LIBRARY(${IODRIVERS_BASE_TASKLIB_NAME} SHARED 
-    ${IODRIVERS_BASE_TASKLIB_SOURCES})
+    PortStream.cpp ${IODRIVERS_BASE_TASKLIB_SOURCES})
 
 add_dependencies(${IODRIVERS_BASE_TASKLIB_NAME}
     regen-typekit)
