convert the test suite to Syskit and to be actually automated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,8 @@ INCLUDE(iodrivers_baseBase)
 # FIND_PACKAGE(KDL)
 # FIND_PACKAGE(OCL)
 
+if (ROCK_TEST_ENABLED)
+    enable_testing()
+    find_package(Syskit REQUIRED)
+    syskit_orogen_tests(test)
+endif()
