install the helpers for the benefit of other packages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,12 @@ if (ROCK_TEST_ENABLED)
     find_package(Syskit REQUIRED)
     syskit_orogen_tests(test)
 endif()
+
+option(INSTALL_OROGEN_TEST_HELPERS
+       "whether test helpers should be installed (requires Ruby)" ON)
+if (INSTALL_OROGEN_TEST_HELPERS)
+    find_package(Rock REQUIRED)
+    include(RockRuby)
+    install(FILES test/orogen_test_helpers.rb
+            DESTINATION ${RUBY_LIBRARY_INSTALL_DIR}/iodrivers_base)
+endif()
